# gaiax-populateBD-keywords

./: .env.example  README.md  pyproject.toml
src/: main.py
src/backend/: SQL_db.py  embed_datasets.py  genKeywords.py  llm.py  scrap_CES.py  scrap_web.py  scraper.py
src/backend/embeddings/: embedding.py  vector_db.py
