[tool.poetry]
name = "gaiax-populatebd-keywords"
version = "0.1.0"
description = ""
authors = ["joao-ferreira-dc <158472420+joao-ferreira-dc@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
bs4 = "^0.0.2"
selenium = "^4.21.0"
langchain-community = "^0.2.1"
langchain-openai = "^0.1.7"
langchain-core = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
